correcoes e criacao do sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     --popover: 0 100% 50%;                        /* vermelho */
     --popover-foreground: 240 10% 3.9%;           /* cinza escuro */
     --primary: 258 67.6% 81.2%;                   /* roxo */
-    --primary-foreground: 0 0% 98%;               /* quase branco */
+    --primary-foreground: 0 0% 20%;             /* vermelho */
     --secondary: 0 100% 50%;                      /* vermelho */
     --secondary-foreground: 240 5.9% 10%;         /* cinza escuro */
     --muted: 0 100% 50%;                          /* vermelho */
@@ -27,7 +27,25 @@
     --chart-3: 16 100% 66.7%;                     /* laranja */
     --chart-4: 214 100% 66.7%;                    /* azul */
     --chart-5: 258 67.6% 81.2%;                   /* roxo */
-    --radius: 15px;                              
+    --radius: 15px;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;                              
+  }
+  .dark {
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 @layer base {
@@ -39,5 +57,13 @@
   }
   :root {
     --foreground: 0 0% 100%; /* branco */
+  }
+}
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
